--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "@types/node": "^16.18.44",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-select": "^5.0.1",
     "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
+    "countries-list": "^2.6.1",
+    "formik": "^2.4.3",
+    "i18n-iso-countries": "^7.6.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
